~ v4.2.0.0
- Added a feature to automatically choose the output name
- Improved the trimming system, you can now choose a start timestamp and automatically cut until the end, or vise-versa
- Added an option to download thumbnails
- Added a feature to download playlists (just paste a playlist link and it will auto-detect)
- Added a button to reset settings to default
- Updated the config system
- Minor visual changes
- Fixed minor bugs

~ v4.1.1.0
- Fixed history not sorting correctly

~ v4.1.0.0
- Added a new format option named mp4 (fast), this option will download videos as fast as possible and disregard all codecs (this is extremely useful for downloading long videos if you plan on just viewing them, some video editors may not accept this format)
- Minor spelling changes

~ v4.0.1.0
- Fixed a bug where downloads could not be started again if the previous one failed
- Double-clicking on custom argument text boxes now opens the documentation pages for each redist (forgot to add this)
- History now sorts in descending order

~ v4.0.0.0
- I completely re-wrote MediaDownloader from the ground-up, I fixed several major issues and greatly optimized parts of the code
- Added a feature to queue multiple downloads
- Added a feature that displays previous downloads
- Added a feature to change the resolution of video downloads
- Added a feature to change the framerate of video downloads
- Added a feature to specify custom FFmpeg arguments
- Added a bootstrapper for downloading yt-dlp/ffmpeg
- Fixed a bug with downloading from sites that don't have mp4 as their primary codec (you will no longer get errors when downloading from non-YouTube sites)
- Download names no longer contain numbers in them (they only will if the name is left blank)
- Fixed the open directory button to work with image sequences
- Updated the UI
- New logo/banner

~ v3.10.0.0
- Added more format options (mkv, flac, opus, png/jpg sequences, and audio visualizers. also decided to re-add webm c:)